[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemy/WeaponGear.gd" type="Script" id=1]
[ext_resource path="res://Pics/gear.png" type="Texture" id=2]
[ext_resource path="res://Atta_Detect/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Atta_Detect/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/Enemystats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Pics/gear_2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "blink",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.196

[sub_resource type="CircleShape2D" id=3]
radius = 10.225

[sub_resource type="CircleShape2D" id=4]
radius = 12.0864

[node name="WeaponGear" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 80
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.062685, -0.0471516 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "blink"
frame = 1
playing = true

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.375, 0.5 )
shape = SubResource( 2 )

[node name="self_destroy" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Enemystats" parent="." instance=ExtResource( 5 )]
damage = 19.0

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
collision_mask = 2147483648
is_enemy = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="self_destroy" to="." method="_on_self_destroy_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
